<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fontster</string>
    
    <string name="install_button">Install a font</string>
    <string name="backup_restore_button">Backup and restore fonts</string>
    <string name="view_current_button">View currently installed font</string>
    
    <string name="backup_button">Backup</string>
    <string name="restore_button">Restore</string>
    <string name="delete_backup_button">Delete backup</string>
    
    <string name="regular">Regular</string>
    <string name="italic">Italic</string>
    <string name="bold">Bold</string>
    <string name="bold_italic">Bold Italic</string>
    <string name="light">Light</string>
    <string name="light_italic">Light Italic</string>
    <string name="thin">Thin</string>
    <string name="thin_italic">Thin Italic</string>
    <string name="condensed">Condensed</string>
    <string name="condensed_italic">Condensed Italic</string>
    <string name="condensed_bold">Condensed Bold</string>
    <string name="condensed_bold_italic">Condensed Bold Italic</string>
    
    <string name="clear_cache_message">Delete old previously downloaded fonts.</string>
    <string name="clear_cache_title">Clear cache</string>
    <string name="request_message">Send us a font that you want to be added.</string>
    <string name="request_title">Request a font</string>
    
    <string name="reboot_preference">Reboot</string>
    <string name="reboot_preference_message">Restart the device.</string>
    <string name="restart_systemui">Restart SystemUI</string>
    <string name="restart_systemui_message">Refresh the system interface.</string>
    <string name="source_message">View the code of this app on GitHub.</string>
    <string name="source_title">Source</string>
    <string name="contact_message">Send the developer an email.</string>
    <string name="contact_title">Contact</string>
    <string name="website_message">Check out our website.</string>
    <string name="website_title">Website</string>
    <string name="donate_message">Support the developer.</string>
    <string name="donate_title">Donate</string>
    <string name="contributors">Contributors</string>
    <string name="lead_developer">Lead developer</string>
    <string name="priyesh">Priyesh Patel</string>
    <string name="marketing">Marketing administrator</string>
    <string name="arjun">Arjun Sharma</string>
    <string name="co">Co-developer</string>
    <string name="ethan">Ethan Chen</string>
</resources>