<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/regular"
        android:textColor="#ff666666"
        android:textSize="25.0dip"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/italic"
        android:textColor="#ff666666"
        android:textSize="25.0dip"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/bold"
        android:textColor="#ff666666"
        android:textSize="25.0dip"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/bolditalic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/bold_italic"
        android:textColor="#ff666666"
        android:textSize="25.0dip"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/light"
        android:textColor="#ff666666"
        android:textSize="25.0dip"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/lightitalic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/light_italic"
        android:textColor="#ff666666"
        android:textSize="25.0dip"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/thin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:text="@string/thin"
        android:textColor="#ff666666"
        android:textSize="25.0dip"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/thinitalic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:text="@string/thin_italic"
        android:textColor="#ff666666"
        android:textSize="25.0dip"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/condensed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/condensed"
        android:textColor="#ff666666"
        android:textSize="25.0dip"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/condenseditalic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/condensed_italic"
        android:textColor="#ff666666"
        android:textSize="25.0dip"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/condensedbold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/condensed_bold"
        android:textColor="#ff666666"
        android:textSize="25.0dip"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/condensedbolditalic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/condensed_bold_italic"
        android:textColor="#ff666666"
        android:textSize="25.0dip"
        android:textStyle="bold|italic" />

</LinearLayout>