<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0EEEE"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/installFont"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="@drawable/main_button_selector"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/install_button"
        android:textColor="#ff666666" />

    <Button
        android:id="@+id/backup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="@drawable/main_button_selector"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/backup_restore_button"
        android:textColor="#ff666666" />
    
    <Button
        android:id="@+id/test"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="@drawable/main_button_selector"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/view_current_button"
        android:textColor="#ff666666" />
</LinearLayout>